--- a/src/App.css
+++ b/src/App.css
@@ -157,10 +157,23 @@ body {
 }
 
 .card{
+    position: relative;
     width: 200px;
     min-width: 200px;
     padding: 1rem;
-    margin-inline: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.sold{
+    position: absolute;
+    top: 1.5rem;
+    left: 1.5rem;
+    background-color: white;
+    padding: 0.2rem;
+    border-radius: 0.3rem;
+    font-size: 0.8rem;
+    font-weight: bold;
 }
 
 .card-description{
